Introducing new features to IoTDB JVM GC options (#12088)